test_files =						\
	alpha-both.png					\
	alpha-horiz.png					\
	alpha-internal1.png				\
	alpha-internal2.png				\
	alpha-vert.png					\
	app-1-1.fc21.i686.rpm				\
	app-1-1.fc21.x86_64.rpm				\
	app-console-1-1.fc21.noarch.rpm			\
	app-extra-1-1.fc21.noarch.rpm			\
	asb-self-test.xml.gz				\
	broken.appdata.xml				\
	broken.metainfo.xml				\
	composite-1-1.fc21.x86_64.rpm			\
	example.appdata.xml				\
	example.desktop					\
	example.metainfo.xml				\
	example-v04.xml.gz				\
	example-v06.yml.gz				\
	example.yml					\
	font-1-1.fc21.noarch.rpm			\
	font-serif-1-1.fc21.noarch.rpm			\
	intltool.appdata.xml.in				\
	origin.xml					\
	rpmbuild/app.png				\
	settings-panel.desktop				\
	screenshot.png					\
	ss-small.png					\
	success.appdata.xml				\
	test-0.1-1.fc21.noarch.rpm			\
	translated.appdata.xml				\
	usr/share/appdata/broken.appdata.xml		\
	usr/share/app-install/desktop/test.desktop	\
	usr/share/app-install/icons/test.png		\
	usr/share/icons/hicolor/64x64/apps/test2.png	\
	usr/share/icons/hicolor/128x128/apps/test3.png	\
	usr/share/pixmaps/test.png			\
	validate.xml.gz

CLEANFILES =						\
	rpmbuild/app.bin				\
	rpmbuild/en_GB.mo				\
	rpmbuild/ru.mo

EXTRA_DIST = $(test_files)

-include $(top_srcdir)/git.mk
